# nexus-migrator

./: .editorconfig  .gitignore  README.md  main.py  pyproject.toml
.cdq/: components.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yaml
nexus_migrator/: grandmaster.py  main.py  migrate.py
nexus_migrator/history/: Historian.py  __init__.py
nexus_migrator/history/models/: History.py  HistoryEntry.py
nexus_migrator/nexus_client/: NexusClient.py  UploadPayload.py  factory.py  temp.py
nexus_migrator/nexus_client/models/: Component.py  ComponentAsset.py  GradlePluginComponent.py  HelmComponent.py  MavenComponent.py  PypiComponent.py  RawComponent.py
